2003-05-30  Frank Ch. Eigler  <fche@redhat.com>

	* testsuite/libmudflap.c/pass38-frag.c: New test for
	-fwritable-strings.

2003-05-23  Frank Ch. Eigler  <fche@redhat.com>

	* mf-runtime.c (__mf_sigusr1_handle): Call unlocked variant of
	__mf_report, asserting reentrant calling context.

2003-05-23  Frank Ch. Eigler  <fche@redhat.com>

	* mf-hooks.c (realloc): Correct reentrancy logic.
	* testsuite/libmudflap.c/hook-allocstuff.c: New test case.

2003-05-20  Frank Ch. Eigler  <fche@redhat.com>

	* mf-hooks.c (LIBMUDFLAPTH_THREADS_MAX): New macro, replaces
	PTHREAD_THREADS_MAX.  Update users.
	* mf-runtime.c (__mf_usage): Print [active] instead of [default]
	for active options.
	* testsuite/Makefile.am (all-local): Prime dejagnu site.exp file
	with libmudflapth presence indicator.
	* testsuite/Makefile.in: Regenerated.

2003-05-16  Frank Ch. Eigler  <fche@redhat.com>

	* Makefile.am (AM_CFLAGS): Remove "-ansi".
	* configure.in: Remove silly no-pthreads => no-shared logic.
	* Makefile.in, configure: Regenerated.
	* mf-heuristics.c (__mf_heuristic_check): Remove reentrancy hacks.
	* mf-hooks.c (BEGIN_PROTECT, END_PROTECT): Reorganize reentrancy
	code.  Count reentrancy events.
	(all hook functions): Don't directly manipulate __mf_state variable.
	Add TRACE calls to hook functions without them.
	* mf-impl.h (LOCKTH): Try to count lock contention events.
	(VERBOSE_TRACE, TRACE): Remove reentrancy hacks.
	* mf-runtime.c (BEGIN_RECURSION_PROTECT, END_RECURSION_PROTECT):
	Reorganize reentrancy code.
	(external __mf_ entry points): Use RECURSION_PROTECT mechanism to
	identify reentrancy with mutex holding times.
	(internal __mfu_ entry points): Remove internal reentrancy code.
	(__mf_init): Use ordinary locked calls.
	(__mfu_report): Print the two new counts.
	* testsuite/lib/libmudflap.exp:	Filter out junk ld/pthreads messages.
	* testsuite/libmudfap.cth/cthfrags.exp: New test driver.
	* testsuite/libmudflap.cth/pass37-frag.c: New pthreads test. 