@@ -1,7 +1,0 @@
-static const char *string[] = {"bla bla bla"};
-
-int main ()
-{
-        return (0);
-}
-/* { dg-options "-fwritable-strings -fmudflap" { target *-*-* } } */
