@@ -1,3 +1,9 @@
+2003-06-02  Frank Ch. Eigler  <fche@redhat.com>
+
+	* testsuite/libmudflap.c/pass38-frag.c: Deleted.  -fwritable-strings
+	is about to become deprecated, and its present handling bugs are
+	unworthy of fixing.
+
 2003-05-30  Frank Ch. Eigler  <fche@redhat.com>
 
 	* testsuite/libmudflap.c/pass38-frag.c: New test for
